Fixed z-index styles

--- a/src/components/Background/Background.module.css
+++ b/src/components/Background/Background.module.css
@@ -12,4 +12,5 @@
 
 .Background .Image {
     height: 100%;
+    z-index: 300;
 }
