--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,7 +8,7 @@
     position: fixed;
     top: 0;
     mix-blend-mode: difference;
-    z-index: 500;
+    z-index: 700;
 }
 
 .Header .Languages {
