--- a/src/components/LinearX/LinearX.module.css
+++ b/src/components/LinearX/LinearX.module.css
@@ -7,4 +7,5 @@
 
 .Letters .Letter {
     display: inline-block;
+    z-index: 500;
 }
